# oceanmesh-tools

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
examples/: mesh_viz_driver.py  run_mesh_interactive.sh  run_viz.sh  run_viz1.sh
notebooks/: 00_quickstart.ipynb
src/oceanmesh_tools/: __init__.py  cli.py  config.py
src/oceanmesh_tools/io/: fort14.py  fort14_boundaries.py
src/oceanmesh_tools/mesh/: boundary.py
src/oceanmesh_tools/plot/: boundary_fast.py  viz.py
src/oceanmesh_tools/scan/: matlab_inputs.py  resolve_paths.py
src/oceanmesh_tools/utils/: progress.py
src/oceanmesh_tools/vis/: __init__.py  interactive_mesh.py
tests/: test_boundary_debug_dumps.py  test_catalog_normalization.py  test_cli_viz_contract.py  test_cli_viz_figs_and_dpi.py  test_coast_filter.py  test_coast_segments_independent.py  test_coast_subtract.py  test_fort14.py  test_fort14_boundaries_variants.py  test_fort14_segments.py  test_matlab_inputs.py  test_open_boundary_audit.py  test_open_boundary_segments.py  test_resolve_paths.py  test_viz_with_script.py
tests/fixtures/: segments.fort14  tiny.fort14
tools/: clean_artifacts.sh
