[project]
name = "oceanmesh-tools"
version = "0.1.0"
description = "Utilities for scanning OceanMesh2D inputs and visualizing ADCIRC meshes"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "oceanmesh-tools" }]

dependencies = [
    "matplotlib>=3.5",
]

[project.optional-dependencies]
geo = [
    "rasterio>=1.3; platform_system != 'Windows'",
    "geopandas>=0.13; platform_system != 'Windows'",
    "shapely>=2.0",
]
test = [
    "pytest>=7.0",
]

[project.scripts]
omt = "oceanmesh_tools.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

