[project]
name = "oceanmesh-tools"
version = "0.1.0"
description = "Utilities for scanning OceanMesh2D inputs and visualizing ADCIRC meshes"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "oceanmesh-tools" }]

dependencies = [
  "matplotlib>=3.8",   # Py3.12世代に足並み
]

[project.optional-dependencies]
geo = [
  "shapely>=2.0",
  "pyproj>=3.6",
  "rasterio>=1.3; platform_system != 'Windows'",
  "geopandas>=0.14; platform_system != 'Windows'",
  "fiona>=1.9; platform_system != 'Windows'",
  "xarray>=2024.1",
  "cartopy>=0.22",
  "hvplot>=0.9",
]
test = ["pytest>=7.4"]

[project.scripts]
omt = "oceanmesh_tools.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
]
ignore = []
